# joulehunter

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
.github/workflows/: publish-to-pypi.yaml  publish-to-test-pypi.yaml  python-publish.yml  test.yaml
docs/: Makefile  conf.py  guide.md  home.md  how-it-works.md  index.md  reference.md
examples/: async_example_simple.py  async_experiment_1.py  async_experiment_3.py  async_experiment_4.py  c_sort.py  django_template_render.py  flask_hello.py
examples/django_example/: README.md
examples/django_example/django_example/: settings.py
html_renderer/public/: index.html
html_renderer/src/: App.vue  Frame.vue  Header.vue
joulehunter/: __init__.py  __main__.py  energy.py  middleware.py  processors.py  profiler.py  session.py  stack_sampler.py  typing.py  util.py
joulehunter/low_level/: stat_profile.c  stat_profile_python.py
joulehunter/renderers/: __init__.py  base.py  console.py  html.py  jsonrenderer.py
joulehunter/renderers/html_resources/: app.js
metrics/: interrupt.py  multi_overhead.py  overflow.py  overhead.py
pyinstrument/: __main__.py  energy.py  profiler.py  session.py  stack_sampler.py
pyinstrument/renderers/: console.py
test/: conftest.py  fake_time_util.py  test_cmdline.py  test_overflow.py  test_processors.py  test_profiler.py  test_profiler_async.py  test_stack_sampler.py  test_threading.py  util.py
test/low_level/: test_threaded.py  util.py
